infrastructure/system/argocd/base/argo-cd-ui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/description: Declarative GitOps CD for Kubernetes
    gethomepage.dev/group: Cluster
    gethomepage.dev/icon: argo-cd
    gethomepage.dev/pod-selector: ""
    # NOTE: because this is an IngressRoute
    gethomepage.dev/href: https://argocd.services.sbling.net
    gethomepage.dev/app: argocd-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.services.sbling.net`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: no-verify-tls
  tls:
    secretName: argocd-services-sbling-net-prod-cert
