infrastructure/system/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/description: Declarative GitOps CD for Kubernetes
    gethomepage.dev/group: Cluster
    gethomepage.dev/icon: argo-cd
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: cilium
  rules:
    - host: &host argocd.services.sbling.net
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
